syntax = "proto3";
package pb;

option go_package = "github.com/snple/beacon/pb;pb";

message Slot {
    string id = 1;
    string node_id = 2;
    string name = 3;
    string desc = 4;
    string tags = 5;
    string secret = 7;
    string config = 8;
    sint32 link = 9;
    sint32 status = 10;
    int64 created = 11;
    int64 updated = 12;
    int64 deleted = 13;
}
